Actualizacion de códigos
Actualizacion final de codex

--- a/316030670_GPO13_PROYECTO2024-2/316030670_GPO13_PROYECTO2024-2/316030670_GPO13_PROYECTO2024-2.vcxproj
+++ b/316030670_GPO13_PROYECTO2024-2/316030670_GPO13_PROYECTO2024-2/316030670_GPO13_PROYECTO2024-2.vcxproj
@@ -133,27 +133,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="Mesh.h" />
-    <ClInclude Include="Model.h" />
-    <ClInclude Include="Shader.h" />
+    <ClCompile Include="Main_Principal.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\anim.frag" />
     <None Include="Shaders\anim.vs" />
-    <None Include="Shaders\anim2.frag" />
-    <None Include="Shaders\anim2.vs" />
     <None Include="Shaders\lamp.frag" />
     <None Include="Shaders\lamp.vs" />
-    <None Include="Shaders\lamp2.frag" />
-    <None Include="Shaders\lamp2.vs" />
     <None Include="Shaders\lighting.frag" />
     <None Include="Shaders\lighting.vs" />
-    <None Include="Shaders\modelLoading.frag" />
-    <None Include="Shaders\modelLoading.vs" />
+    <None Include="Shaders\SkyBox.frag" />
+    <None Include="Shaders\SkyBox.vs" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Animacion.cpp" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Texture.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
